second commit - 隐藏秒杀接口

--- a/src/main/resources/static/goods_detail.htm
+++ b/src/main/resources/static/goods_detail.htm
@@ -218,8 +218,9 @@
 	}
 
 	function doMiaoSha(path) {
+	    alert(path);
 		$.ajax({
-			url : "/miaosha/"+path+"/do_miaosha",
+			url : "/miaosha/" + path + "/do_miaosha",
 			type : "POST",
             data:{
                 goodsId : $("#goodsId").val()
